k8s/domains/identity/infra/ui/overlays/live/identity-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-ui-depl
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: identity-ui
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
