k8s/domains/identity/infra/ui/overlays/live/identity-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: identity-ui-public
spec:
  tls:
    certResolver: le
    domains:
      - main: tma.com
